Fixed product database related issue and update mail service